add first NB + apps

--- a/notebooks/01-agentic-continuum.ipynb
+++ b/notebooks/01-agentic-continuum.ipynb
@@ -28,12 +28,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ['ANTHROPIC_API_KEY'] = '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'\n",
+    "os.environ['ANTHROPIC_API_KEY'] = 'XXX'\n",
     "\n",
     "from concurrent.futures import ThreadPoolExecutor\n",
     "from typing import List, Dict, Callable\n",
